// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnonymousEditWarning matches snapshot if anonymous 1`] = `
"<transition-stub name="cdx-message" leaveactiveclass="" appear="false" persisted="false" css="true" class="wbl-snl-anonymous-edit-warning">
  <div class="cdx-message cdx-message--block cdx-message--warning" aria-live="polite"><span class="cdx-icon cdx-icon--medium cdx-message__icon--vue"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" aria-hidden="true"><!--v-if--><g><path d="M11.53 2.3A1.85 1.85 0 0010 1.21 1.85 1.85 0 008.48 2.3L.36 16.36C-.48 17.81.21 19 1.88 19h16.24c1.67 0 2.36-1.19 1.52-2.64zM11 16H9v-2h2zm0-4H9V6h2z"></path></g></svg></span>
    <div class="cdx-message__content">
      <!-- eslint-disable-next-line vue/no-v-html --><span>(wikibase-anonymouseditwarning, loginLink, createAccountLink)</span>
    </div>
    <!--v-if-->
  </div>
</transition-stub>"
`;

exports[`AnonymousEditWarning uses alternative message if tempuser is enabled 1`] = `
"<transition-stub name="cdx-message" leaveactiveclass="" appear="false" persisted="false" css="true" class="wbl-snl-anonymous-edit-warning">
  <div class="cdx-message cdx-message--block cdx-message--warning" aria-live="polite"><span class="cdx-icon cdx-icon--medium cdx-message__icon--vue"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" aria-hidden="true"><!--v-if--><g><path d="M11.53 2.3A1.85 1.85 0 0010 1.21 1.85 1.85 0 008.48 2.3L.36 16.36C-.48 17.81.21 19 1.88 19h16.24c1.67 0 2.36-1.19 1.52-2.64zM11 16H9v-2h2zm0-4H9V6h2z"></path></g></svg></span>
    <div class="cdx-message__content">
      <!-- eslint-disable-next-line vue/no-v-html --><span>(wikibase-anonymouseditnotificationtempuser, loginLink, createAccountLink)</span>
    </div>
    <!--v-if-->
  </div>
</transition-stub>"
`;
